<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="left"
    android:id="@+id/lay">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnTL"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#0000FF"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnTM"
        android:background="#0000FF"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnTL"
        android:layout_toEndOf="@+id/btnTL"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnTR"
        android:background="#0000FF"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnTM"
        android:layout_toEndOf="@+id/btnTM"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnML"
        android:background="#0000FF"
        android:layout_below="@+id/btnTL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnMM"
        android:background="#0000FF"
        android:layout_alignTop="@+id/btnML"
        android:layout_alignLeft="@+id/btnTM"
        android:layout_alignStart="@+id/btnTM" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnMR"
        android:background="#0000FF"
        android:layout_alignTop="@+id/btnMM"
        android:layout_alignLeft="@+id/btnTR"
        android:layout_alignStart="@+id/btnTR" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnBL"
        android:background="#0000FF"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnML"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnBM"
        android:background="#0000FF"
        android:layout_alignTop="@+id/btnBL"
        android:layout_alignLeft="@+id/btnMM"
        android:layout_alignStart="@+id/btnMM" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnBR"
        android:background="#0000FF"
        android:layout_alignTop="@+id/btnBM"
        android:layout_alignLeft="@+id/btnMR"
        android:layout_alignStart="@+id/btnMR" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/btnBL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textSize="11sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignRight="@+id/btnBR"
        android:layout_alignEnd="@+id/btnBR"
        android:textSize="11sp"
        android:onClick="nextFace" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/btnTR"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/textInstruction">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blue"
            android:id="@+id/radBlue"
            android:layout_gravity="left|center"
            android:textSize="15sp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_red"
            android:id="@+id/radRed"
            android:layout_gravity="left|center_horizontal"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_green"
            android:id="@+id/radGreen"
            android:layout_gravity="left|center_horizontal"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_orange"
            android:id="@+id/radOrange"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yellow"
            android:id="@+id/radYellow"
            android:textSize="15sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_white"
            android:id="@+id/radWhite"
            android:textSize="15sp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_pick"
        android:id="@+id/textView"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnTR"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/keepyellow"
        android:id="@+id/textInstruction"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btnSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:textSize="15sp"
        android:textColor="#000000"
        android:background="#ffff00"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_cube"
        android:id="@+id/textView2"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/text_solve"
        android:id="@+id/btnSolve"
        android:textSize="15sp"
        android:onClick="solveCube"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnNext"
        android:layout_alignLeft="@+id/btnBR"
        android:layout_alignStart="@+id/btnBR" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prevList"
        android:layout_below="@+id/textInstruction"
        android:layout_toLeftOf="@+id/btnSolve"
        android:layout_toStartOf="@+id/btnSolve"
        android:layout_marginTop="18dp"
        android:choiceMode="singleChoice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_prev"
        android:id="@+id/textView5"
        android:layout_below="@+id/textInstruction"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        android:textSize="15sp" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/preview"
        android:layout_toRightOf="@+id/prevList"
        android:layout_above="@+id/btnSolve"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
