<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codechefamit.a_cubesolver.SolveActivity"
    android:gravity="left"
    android:id="@+id/solveLayout">

    <ListView
        android:layout_width="110dp"
        android:layout_height="175dp"
        android:id="@+id/phases"
        android:choiceMode="singleChoice"
        android:longClickable="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_phase"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_steps"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:layout_above="@+id/phases"
        android:layout_alignLeft="@+id/steps"
        android:layout_alignStart="@+id/steps"
        android:textStyle="bold" />

    <ListView
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:id="@+id/steps"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/phases"
        android:layout_toRightOf="@+id/phases"
        android:layout_toEndOf="@+id/phases" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_m"
        android:id="@+id/textMoves"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_rotation"
        android:id="@+id/textView7"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/include"
        android:layout_alignStart="@+id/include" />

    <include
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        layout="@layout/image"
        android:id="@+id/include"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/steps"
        android:layout_alignEnd="@+id/steps"
        android:layout_alignBottom="@+id/desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_desc"
        android:id="@+id/textView8"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/phases"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        layout="@layout/desc"
        android:id="@+id/desc"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textMoves"
        android:layout_marginRight="5dp" />

</RelativeLayout>
